# GhostLink

./: .gitignore  AGENTS.md  GhostLink.py  LICENSE  README.md  decoder.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
ghostFace/: .gitignore  FINAL_SUMMARY.md  GhostFace.applescript  GhostFace_Launcher.sh  GhostWeb.html  QUICK_START.md  README_Web_Interface.md  START_HERE.md  UI_UPGRADE_SUMMARY.md  __init__.py  create_icon.sh  ghostlink_api.py  launch.py  make_app.sh  robust_launcher.sh  start_ghostlink_web.py
ghostFace/GhostFace.app/Contents/: Info.plist
ghostFace/GhostFace.app/Contents/MacOS/: applet
ghostFace/GhostFace.app/Contents/Resources/Scripts/: main.scpt
ghostFace/GhostFace.app/Contents/_CodeSignature/: CodeResources
ghostFace/testing_brahs/: msg_2ff26afba0fc.mid  msg_95e94dfc5ede.mid  msg_eb663a4d92a1.mid
ghostFace/tests/: 112233.mid  123654.mid  asd123.mid  khkh.mid  msg_1ba52dfd0336.mid  msg_bf2f47f2bbdf.mid  msg_f72dfe3ae8fc.mid  my_test_file.mid  test_fix.mid  test_localStorage.mid  test_selection.mid
ghostlink/: __init__.py  __main__.py  constants.py  decoder.py  profiles.py
gibberlink/: __init__.py  __main__.py  constants.py  decoder.py
tests/: conftest.py  test_ascii_only.py  test_bits_to_symbols.py  test_cli_round_trip.py  test_db_migration.py  test_decoder_args.py  test_full_cycle.py  test_hamming.py  test_interleave.py  test_iter_inputs.py  test_list_text_files.py  test_out_name.py  test_parse_payload.py  test_phase_continuity.py  test_profiles.py  test_slow_durations.py
