[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gibberlink"
version = "0.1.0"
description = "Stealth audio encoder for embedding structured text in music"
readme = "README.md"
authors = [{name = "GhostLink Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.scripts]
gibberlink = "gibberlink.__main__:main"
gibberlink-decode = "gibberlink.decoder:main"
